[tool.poetry]
name = "context-logger"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakub@ratingcaptain.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
ipykernel = "^6.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
